--- a/Code/PerlerMaker.vcxproj.filters
+++ b/Code/PerlerMaker.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="PerlerMaker\PerlerMaker.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PerlerMaker\Utils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Data\XMLFiles\Resources" />
@@ -35,6 +38,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PerlerMaker\PerlerMaker.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PerlerMaker\Utils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
