--- a/Code/PerlerMaker.vcxproj.filters
+++ b/Code/PerlerMaker.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="PerlerMaker\PalettesManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PerlerMaker\CanvasManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Data\XMLFiles\Resources" />
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PerlerMaker\PalettesManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PerlerMaker\CanvasManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
