--- a/Code/PerlerMaker.vcxproj
+++ b/Code/PerlerMaker.vcxproj
@@ -269,6 +269,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PerlerMaker\CanvasManager.h" />
+    <ClInclude Include="PerlerMaker\Defines.h" />
     <ClInclude Include="PerlerMaker\Options.h" />
     <ClInclude Include="PerlerMaker\PalettesManager.h" />
     <ClInclude Include="PerlerMaker\PerlerMaker.h" />
