--- a/Code/PerlerMaker.vcxproj.filters
+++ b/Code/PerlerMaker.vcxproj.filters
@@ -56,5 +56,8 @@
     <ClInclude Include="PerlerMaker\CanvasManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PerlerMaker\Defines.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
