--- a/Code/PerlerMaker.vcxproj.filters
+++ b/Code/PerlerMaker.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="PerlerMaker\CanvasManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PerlerMaker\Utils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Data\XMLFiles\Resources" />
@@ -57,6 +60,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PerlerMaker\Defines.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PerlerMaker\Utils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
