--- a/Code/Pixeler.vcxproj
+++ b/Code/Pixeler.vcxproj
@@ -31,6 +31,7 @@
     <ProjectGuid>{E7EE1568-0879-4B92-96F8-A05187328194}</ProjectGuid>
     <RootNamespace>Demo</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Pixeler</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -121,7 +122,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)FrameWork\FrameWork\Code;$(SolutionDir)FrameWork\FrameWork\Dependencies\Includes;$(SolutionDir)Utilities\PerlerMaker\Code;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)FrameWork\FrameWork\Code;$(SolutionDir)FrameWork\FrameWork\Dependencies\Includes;$(SolutionDir)Utilities\Pixeler\Code;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;IMGUI_DEFINE_MATH_OPERATORS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
@@ -160,7 +161,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)FrameWork\FrameWork\Code;$(SolutionDir)FrameWork\FrameWork\Dependencies\Includes;$(SolutionDir)Utilities\PerlerMaker\Code;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)FrameWork\FrameWork\Code;$(SolutionDir)FrameWork\FrameWork\Dependencies\Includes;$(SolutionDir)Utilities\Pixeler\Code;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;IMGUI_DEFINE_MATH_OPERATORS;IMGUI_DISABLE_OBSOLETE_FUNCTIONS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
@@ -193,7 +194,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)FrameWork\FrameWork\Code;$(SolutionDir)FrameWork\FrameWork\Dependencies\Includes;$(SolutionDir)Utilities\PerlerMaker\Code\PerlerMaker;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)FrameWork\FrameWork\Code;$(SolutionDir)FrameWork\FrameWork\Dependencies\Includes;$(SolutionDir)Utilities\Pixeler\Code\Pixeler;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;IMGUI_DEFINE_MATH_OPERATORS;IMGUI_DISABLE_OBSOLETE_FUNCTIONS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
@@ -247,13 +248,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="PerlerMaker\CanvasManager.cpp" />
-    <ClCompile Include="PerlerMaker\main.cpp" />
-    <ClCompile Include="PerlerMaker\Options.cpp" />
-    <ClCompile Include="PerlerMaker\PalettesManager.cpp" />
-    <ClCompile Include="PerlerMaker\PalettesManager_ui.cpp" />
-    <ClCompile Include="PerlerMaker\PerlerMaker.cpp" />
-    <ClCompile Include="PerlerMaker\Utils.cpp" />
+    <ClCompile Include="Pixeler\CanvasManager.cpp" />
+    <ClCompile Include="Pixeler\main.cpp" />
+    <ClCompile Include="Pixeler\Options.cpp" />
+    <ClCompile Include="Pixeler\PalettesManager.cpp" />
+    <ClCompile Include="Pixeler\PalettesManager_ui.cpp" />
+    <ClCompile Include="Pixeler\Pixeler.cpp" />
+    <ClCompile Include="Pixeler\Utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Data\XMLFiles\Resources">
@@ -269,14 +270,14 @@
     <ResourceCompile Include="..\Data\res.rc" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="PerlerMaker\CanvasManager.h" />
-    <ClInclude Include="PerlerMaker\ColorPalette.h" />
-    <ClInclude Include="PerlerMaker\Defines.h" />
-    <ClInclude Include="PerlerMaker\Event.h" />
-    <ClInclude Include="PerlerMaker\Options.h" />
-    <ClInclude Include="PerlerMaker\PalettesManager.h" />
-    <ClInclude Include="PerlerMaker\PerlerMaker.h" />
-    <ClInclude Include="PerlerMaker\Utils.h" />
+    <ClInclude Include="Pixeler\CanvasManager.h" />
+    <ClInclude Include="Pixeler\ColorPalette.h" />
+    <ClInclude Include="Pixeler\Defines.h" />
+    <ClInclude Include="Pixeler\Event.h" />
+    <ClInclude Include="Pixeler\Options.h" />
+    <ClInclude Include="Pixeler\PalettesManager.h" />
+    <ClInclude Include="Pixeler\Pixeler.h" />
+    <ClInclude Include="Pixeler\Utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
